Added Oakwoven Short bow to Steady Hand

--- a/darkWoods.html
+++ b/darkWoods.html
@@ -1373,7 +1373,8 @@
                             Sivi Thrushwood
                           </td>
                           <td>
-                            <img class="thumbnail-img" src="Images/Darkwoods/Slow_And_Steady_Night_Elf_Archer_Cape.png" alt="Night Elf Archer Cape" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Darkwoods/Slow_And_Steady_Night_Elf_Archer_Cape_Stats.png' alt='Night Elf Archer Cape Stats'>">
+                            <img class="thumbnail-img" src="Images/Darkwoods/Steady_Hand_Oakwoven_Short_Bow.png" alt="Oakwoven Short Bow" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Darkwoods/Steady_Hand_Oakwoven_Short_Bow_Stats.png' alt='Oakwoven Short Bow Stats'>">
+                            <img class="thumbnail-img" src="Images/Darkwoods/Steady_Hand_Night_Elf_Archer_Belt.png" alt="Night Elf Archer Belt" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Darkwoods/Steady_Hand_Night_Elf_Archer_Belt_Stats.png' alt='Night Elf Archer Belt Stats'>">
                           </td>                        
                     </table>
 
@@ -1396,6 +1397,7 @@
                         Return to <span class="light-red">Sivi Thrushwood</span>, you have killed all the Dragoons with the Oakwoven Short Bow? I am honored to be your acquaintance. Were this belt proudly, as befits your accomplishment. 
                         <hr>
                         <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Oakwoven Short Bow</span></li>
                           <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Night Elf Archer Belt</span></li>
                           <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">27,500</strong> Experience Pool <span class="light-red">experience may very</span></li>
                         </ul>
@@ -1408,7 +1410,7 @@
                   </div>
                 </div>
               </div>
-              <!-- End of Advanced Ranger Training! -->
+              <!-- End of Steady Hand -->
               <div class="line"></div>
 
 
