New Images and updated Grab Bag

--- a/index.html
+++ b/index.html
@@ -1917,6 +1917,42 @@
                         </div>
                       </div>
                     </div>
+                    <div class="panel panel-default">
+                      <div class="panel-heading accordion-border">
+                        <h5 class="panel-title">
+                          <a data-toggle="collapse" data-parent="#accordion" href="#august2021">
+                          August 2021</a>
+                        </h5>
+                      </div>
+                      <div id="august2021" class="panel-collapse collapse">
+                        <div class="panel-body accordion-border">
+                            <ul class="light-grey-text">
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="panel panel-default">
+                      <div class="panel-heading accordion-border">
+                        <h5 class="panel-title">
+                          <a data-toggle="collapse" data-parent="#accordion" href="#september2021">
+                          September 2021</a>
+                        </h5>
+                      </div>
+                      <div id="september2021" class="panel-collapse collapse">
+                        <div class="panel-body accordion-border">
+                            <ul class="light-grey-text">
+                                <li>2 Berzerker Potion Pack</li>
+                                <li>2 Summon Corpse</li>
+                                <li>2 Drop Rate Increase</li>
+                                <li>2 Henchmen</li>
+                            </ul>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
