Completed two more Quest

--- a/silvestValley.html
+++ b/silvestValley.html
@@ -781,12 +781,12 @@
                   </div>
                 </div>
               </div>
-              <!-- End of Foul Beasts -->
+              <!-- End of The Wrong Crowd -->
               <div class="line"></div>
-              <!-- Start of Search for Jhulara  -->
+              <!-- Start of Juicy  -->
               <div class="card bg-main half-width mb-5">
                 <div class="card-header">
-                  <h2 id="searchForJhulara" class="anchor text-center">Search for Jhulara</h2>
+                  <h2 id="juicy" class="anchor text-center">Juicy</h2>
                 </div>
                 <div>
                   <div class="card-body">
@@ -799,7 +799,7 @@
                         </tr>
                         <tr>
                           <td>Apprentice</td>
-                          <td>Searching</td>                        
+                          <td>Traveling</td>                        
                     </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
@@ -810,38 +810,32 @@
                         </tr>
                         <tr>
                           <td>
-                            Zarowyn
+                            Schrute
                           </td>
                           <td>
                             EXP
                           </td>                        
                     </table>
                     <hr>
-                    <p>
-                      If you have spoken to Jhulara you would be doing the Quest <span class="light-red">A Message for Zarowyn.</span>
-                      <hr>
-                    </p>
                     <p class="clearfix">
-                        <img class="npc-img" src="Images/Darkwoods/Search_for_Jhulara_Zarowyn.png" alt="Zarowyn"> 
-                        Speak to <span class="light-red">Zarowyn</span>, To start this quest you need to chose <span class="light-green">Places of death?</span> Aye! Places of death! How else to come to the gate but by dying? We wait for loved ones, hoping to see them again, yet hoping against hope 
-                        that thye never make the journey that takes them through the gate. For if we greet them again at the gate, it is only becasue they have died. and so I watch for my daughter, hoping to hold her again, and hoping that she does not come through that gate for to do so, she must first die.
-                        <span class="light-green"> Your Daughter?</span> Aye, my child Jhulara. She set off many days ago. finding her fortune, as all young ones do. I wonder... You look to be a wanderer. Would you... Could you see it fair to be letting me know if you find her in your travels? <span class="light-green">Aye, I could do that.</span>
-                        I thank thee, friend! I will anxiously await news of her, if she is well and happy or otherwise. Have no fear to bring me a bad report. it is better than not knowing.                        
+                        <img class="npc-img" src="Images/SilvestValley/Juicy_Schrute.png" alt="Schrute"> 
+                        Speak to <span class="light-red">Schrute</span>.
                         <br>
-                        <span class="green">QUEST RECEIVED:</span><span class="red"> Search for Jhulara</span><span class="orange">, Find Jhulara for Zarowyn of Whisperdale.</span>
-                    </p>
+                        <span class="light-red">Schrute: </span>I need someone to deliver news about this year's crop of beets ot my cousin Mose in Vrethpool. Tell him the harvest was quite good and he should be expecting his annual supply of beet juice within the month!
+                        <br>
+                        <span class="green">Player: </span>Beet juice, you say? Well... 
+                        <br>
+                        <span class="red">Schrute: </span>Good, good. I've plenty work to tend here with the beet harvest. My hands will be pink for months!
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Juicy</span><span class="orange">, Schrute of Silvest asked you to tell Mose in Vrethpool about his terrific beet harvest.</span>
+                        <hr>
+                      </p>
                     <p class="clearfix"> 
-                      <img class="npc-img" src="Images/Darkwoods/Search_for_Jhulara_Jhulara.png" alt="Jhulara"> 
-                        Follow the road east then just north. You will find Autumn. She is right in the middle of town. Speak to her. Greetings! I hope you're well this fine day. <span class="orange">*Jhulara smiles kindly at you*</span> Tis a fine day for travelling. Are you on the way to Lord Vezryl's Estate or the hunting lodge? Or perchance to Whisperdale?
-                        <span class="light-green">Whisperdale</span> Whisperdale! Indeed! I do wonder how my father doth fare these days. <span class="orange">*She looks wistfully south, as though trying to focus on something too far away to see* *You tell Jhulara that her father is looking for her*</span> You've already seen him then? But that's excellent! 
-                        Please return to him with news of me, or my good health. I know it will set his mind at rest. 
-                        <br>
-                        <span class="green">QUEST RECEIVED:</span><span class="red"> Search for Jhulara</span><span class="orange">, Bring good news to Zarowyn of Whisperdale that Jhulara is well.</span>
-                        <br>
-                        Follow the road southwest back to Whisperdale and find Zarowyn near the spawn gate. <span class="orange">*You give Zarowyn the message that Jhulara is well and in Autumn*</span> You've seen her then? Gods be praised! And she's well! My thanks to you, friend, for this happy news! <span class="orange">*Zarowyn shakes your hand and wanders away muttering happily to himself and nodding his head*</span>
+                      <img class="npc-img" src="Images/SilvestValley/Juicy_Mose.png" alt="Mose"> 
+                      <span class="red">Schrute: </span>The beet crop is in? oh happy day! I can't wait to taste the sweet nectar of Schrute's beets!
                         <hr>
                         <ul>
-                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">1,100</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">5,500</strong> Experience Pool <span class="light-red">experience may very</span></li>
                         </ul>
                         <hr> 
                         
@@ -849,16 +843,16 @@
                     <p class="mt-4 py-3 text-center quest-complete">
                       Quest Complete
                     </p>
-                       You have brought much happiness to Jhulara and Zarowyn  
+                       You delivered the juicy news to Mose.  
                   </div>
                 </div>
               </div>
-              <!-- End of Search for Jhulara -->
+              <!-- End of Juicy -->
               <div class="line"></div>
-              <!-- Start of A Message for Zarowyn  -->
+              <!-- Start of Quite Entranced  -->
               <div class="card bg-main half-width mb-5">
                 <div class="card-header">
-                  <h2 id="aMessageForZarowyn" class="anchor text-center">A Message for Zarowyn</h2>
+                  <h2 id="quiteEntranced" class="anchor text-center">Quite Entranced</h2>
                 </div>
                 <div>
                   <div class="card-body">
@@ -871,7 +865,7 @@
                         </tr>
                         <tr>
                           <td>Apprentice</td>
-                          <td>Searching</td>                        
+                          <td>Searching & Combat</td>                        
                     </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
@@ -882,46 +876,89 @@
                         </tr>
                         <tr>
                           <td>
-                            Jhulara
+                            Etrois
                           </td>
                           <td>
-                            EXP
+                            <img class="thumbnail-img" src="Images/SilvestValley/Quite_Entranced_Mystic_Orb_of_Alchemy.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/SilvestValley/Quite_Entranced_Mystic_Orb_of_Alchemy_Stats.png' alt='Mystic Orb of Alchemy'>">
                           </td>                        
                     </table>
                     <hr>
-                    <p>
-                      If you have spoken to Zarowyn you would be doing the Quest <span class="light-red">Search for Jhulara.</span>
-                      <hr>
-                    </p>
                     <p class="clearfix">
-                        <img class="npc-img" src="Images/Darkwoods/Search_for_Jhulara_Jhulara.png" alt="Jhulara"> 
-                        Speak to <span class="light-red">Jhulara</span>, Greetings! I hope you're well this fine day. <span class="orange">*Jhulara smiles kindly at you*</span> Tis a fine day for travelling. Are you on the way to Lord Vezryl's Estate or the hunting lodge? Or perchance to Whisperdale?
-                        <span class="light-green">Whisperdale</span> Whisperdale! Indeed! I do wonder how my father doth fare these days. <span class="orange">*She looks wistfully south, as though trying to focus on something too far away to see*</span> I would ask you a favor, friend if you are going to Whisperdale, 
-                          couldst thou pleas find my father, Zarowyn and tell him that I am here; that I am well? It would do much to ease my heart and also, I think, his. Please give him my message... <span class="light-green">Indeed m'lady, I would be happy to assist you.</span>                        
-                          Thank you, a thousand times over, for this favor you do me!
-                          <br>
-                        <span class="green">QUEST RECEIVED:</span><span class="red"> A Message for Zarowyn</span><span class="orange">, Tell Zarowyn of Whisperdale that Jhulara is in Autumn and is doing well.</span>
-                    </p>
+                        <img class="npc-img" src="Images/SilvestValley/Quite_Entranced_Etrois.png" alt="Etrois"> 
+                        Speak to <span class="light-red">Etrois</span>.
+                        <br> 
+                        <span class="light-red">Etrois: </span>Who's there??? I hear your footsteps approach...though you are not known to me... <span class="orange">She draws a dagger</span>
+                        <br>
+                        <span class="green">Player: </span>Peace! I am not an enemy!
+                        <br>
+                        <span class="light-red">Etrois: </span>Excuse me for being so hostile. <span class="orange">She sheaths her dagger</span> I wasn't raised that way, I assure you! Since those cursed marsh lights took my sight, I have become quite fearful... 
+                        <br>
+                        <span class="light-blue">Option: 1</span>
+                        <br>
+                        <span class="green">Player: </span>Marsh lights?
+                        <br>
+                        <span class="light-red">Etrois: </span>Aye, marsh lights. Tis a mystical green light that rises up out of the swampy lands at night. I became quite entranced with them... Gandmam says that evil fairy folk live inside them and wish us ill. I didn't want to believe her, though now I know better! I...hate to bother you..but I wonder...I heard there could be a cure for my disease. 
+                        I need a small assortment of items for this recipe, but I cannot collect it myself, obviously.
+                        <br>
+                        <span class="light-blue">Option: 2</span>
+                        <br>
+                        <span class="light-red">Etrois: </span><span class="orange">She nods</span> It was difficult at first, but I've become accustomed to my life. Do not feel sad... <span class="orange">She smiles cheerfully</span> Still, I do miss seeing beautiful magic spells, and lovely flowers... I...hate to bother you...but I wonder... I heard there could be a cure for my disease. I need a small 
+                        assortment of items for this recipe, but I cannot collect it myself, obviously.
+                        <br>
+                        <span class="green">Player: </span>Say no more. I will help find a cure, lady. 
+                        <br>
+                        <span class="light-red">Etrois: </span><span class="orange">Her face brightens</span> What hope I have! Thank you, kind soul! First, you must gather a goodly number of bloodroot. By foraging, of course. I hear it has other healing properties as well... I heard Father say that he had used it on his wounds, once.
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Quite Entranced</span><span class="orange">, Forage in the wilderness and collect 43 Bloodroot for Etrois of Silvest.</span>
+                        <hr>
+                      </p>
                     <p class="clearfix"> 
-                      <img class="npc-img" src="Images/Darkwoods/Search_for_Jhulara_Zarowyn.png" alt="Zarowyn"> 
-                        Follow the road southwest back to Whisperdale. Speak to <span class="light-red">Zarowyn</span>, <span class="orange">*You give Zarowyn the message that Jhulara is well and in Autumn*</span> Jhulara sen you to find me? Gods be praised! And she's well! My thanks to you, friend, for this happy news!
-                        Tis true, it grieved my spirit. Worry never left my mind. Children will never understand the love of a parent until they themselves bring a life into the world. <span class="orange">*Zarowyn shakes your hand and wanders away muttering happily to himself and nodding his head*</span>
-
+                        Grab your <span class="light-blue">foraging stick </span> <img src="Images/SilvestValley/Quite_Entranced_Foraging_Stick.png">and start foraging any where you can untill you collect 43 <span class="light-blue">bloodroot</span>. <img src="Images/SilvestValley/Quite_Entranced_Bloodroot.png"> When you have them all you will be updated.
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough </span> <span class="green">Bloodroot</span><span class="orange"> to complete the quest.</span>
+                        <br>
+                        Return to Etrois with the bloodroot.
+                        <br>
+                        <span class="light-red">Etrois: </span> Is that you? <span class="oragne">She inclines her ear in your direction</span> I hope you fare well in your quest to find bloodroot... Ah, bloodroot! It smells so fresh! I do not envy your next task... That is, if you still want to help me. I next need a small nuber of scorpion stingers...
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Quite Entranced</span><span class="orange">, Harvest 23 Scorpion Stingers for Etrois.</span>
                         <hr>
                         <ul>
-                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">1,155</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">1,650</strong> Experience Pool <span class="light-red">experience may very</span></li>
                         </ul>
                         <hr> 
-                        
+                        Head outside of town and kill <span class="red">scorpions</span> untill you collect enough <span class="light-blue">Scorpion Stingers</span>. <img src="Images/SilvestValley/Quite_Entranced_Scorpion_Sting.png"> 
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough </span> <span class="green">Scorpion Sting</span><span class="orange"> to complete the quest.</span>  
+                        <br>
+                        <span class="light-red">Etrois: </span>Ah, I thought that was you! And you are back with scorpion stingers, yes? <span class="orange">She counts the stingers</span> This is terrific! All 23. I cannot bear to be near those horrid scorpions...ugh! Nasty, nasty creatures. Now I almost have it! I just need a small handful of toad eyes. 13. 
+                        Plague toads are most common in the woods. It should not take very long! Though I am curious about how you will get them out of the head... 
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Quite Entranced</span><span class="orange">, Harvest 13 Toad Eyes for Etrois.</span>
+                        <hr>
+                        Head out to the Cultist Lair west of town. Kill <span class="red">Plague Toads</span> untill you collect enough <span class="light-blue">Toad Eyes</span>. <img src="Images/SilvestValley/Quite_Entranced_Toad_Eye.png">
+                        <br> 
+                        <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough </span> <span class="green">Toad Eye</span><span class="orange"> to complete the quest.</span>
+                        <br>
+                        <span class="light-red">Etrois: </span>Back again, I see - or here, rather! You have returned with toad eyes, I hope? <span class="orange">She collects the components in here apron</span> Now I must spend some time preparing this tincture... Thank you! Thank you again, I say! The gods have heard my prayer - I will no longer be the outcast!
+                        Though I have not much to reward you I did find this orb in the dust under the troughs here. I thought it felt heavy, and interesting... If nothing else, you could sell it. Fare well, and may your journeys be rewarding!
+                        <br>
+                        Etrois hands you an orb which swirls with alchemical magic.
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Mystic Orb of Alchemy</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">22,000</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>                        
                     </p>
                     <p class="mt-4 py-3 text-center quest-complete">
                       Quest Complete
                     </p>
-                       You have delivered Jhulara's message to her father Zarowyn 
+                       Etrois rewarded you for your help with a strange object she found on the ground 
                   </div>
                 </div>
               </div>
-              <!-- End of A Message for Zarowyn -->
+              <!-- End of Quite Entranced -->
               <div class="line"></div>
               <!-- Start of Loyal  -->
               <div class="card bg-main half-width mb-5">
