Completed The Attack

--- a/silvestValley.html
+++ b/silvestValley.html
@@ -1194,7 +1194,82 @@
               </div>
               <!-- End of The Fort -->
               <div class="line"></div>
-              
+              <!-- Start of The Attack  -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="theAttack" class="anchor text-center">The Attack</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Adept</td>
+                          <td>Combat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Wilson Johnson
+                          </td>
+                          <td>
+                            EXP
+                          </td>                        
+                    </table>
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/SilvestValley/The_Attack_Wilson_Johnson.png" alt="Wilson Johnson"> 
+                        Speak to <span class="light-red">Wilson Johnson</span> in Hothbra.
+                        <br>
+                        <span class="light-red">Wilson Johnson: </span>Hmmmm...these Kobold Fort plans look interesting. It seems they ae expanding the fort in order to mass their forces. This could only mean some form of attack on Silvest! Return to Silvest and speak with Guard Captain Lowes about this at once!
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> The Attack</span><span class="orange">, Tell Guard Captain Lowes in Silvest about the Kobold Attack.</span>
+                        <hr>
+                      </p>
+                    <p class="clearfix">
+                          <img class="npc-img" src="Images/SilvestValley/The_Attack_Guard_Captain_Lowes.png" alt="Guard Captain Lowes"> 
+                         Return to Silvest to speak to Captain Lowes.
+                      <br>
+                      <span class="light-red">Guard Captain Lowes: </span>So you are the one Karter Jons spoke of. He must have told you about the Kobold threat to our city. Wai, what is that? News from the north? What? <span class="orange">He peers off in the distance</span> The horde approaches!! We are severely undermanned.
+                       You must fight for Silvest! You must slay 10 of their ranks in the next 5 minutes. Follow the road to the north. They come! Save Silvest!
+                      <br>   
+                      <span class="green">QUEST UPDATE:</span><span class="red"> The Attack</span><span class="orange">, Slay 10 Kobolds in 5 minutes.</span>
+                      <br>
+                      Head north and kill 10 of the <span class="red">Kobolds</span> before the 5 minutes are up. You will be updated as you kill them.
+                      <br>
+                      <span class="green">QUEST UPDATE: You have killed 10 Kobolds for Guard Captain Lowes!</span>
+                      <br>
+                      When you have killed all 10 you will be updated one final time.
+                      <br>
+                      <span class="green">QUEST UPDATE:</span><span class="red"> The Attack</span><span class="orange">, Return to Guard Captain Lowes in Silvest!</span>
+                      <hr>
+                      <span class="light-red">Guard Captain Lowes: </span>You return alive! We need brave warriors like you here in Silvest. I know we cannot offer you enough, however, to join the ranks of our guards... You will have to have our thanks as your reward...
+                      <hr>
+                      <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Your faction ranking with Sivlest has increased by 500!</span></li>
+                        <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                      </ul>
+                      <hr>                         
+                    </p>
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>
+                     You helped defeat the Kobold hord!                      
+                  </div>
+                </div>
+              </div>
+              <!-- End of The Attack -->
               <div class="line"></div>
 
 
