Added links to the SilvestValley

--- a/quest.html
+++ b/quest.html
@@ -159,8 +159,8 @@
             <div class="line"></div>
 
             <h2 id="silvestValley" class="anchor">Silvest Valley</h2>
-            <p>Comeing Soon</p>
-            <button type="button" class="btn btn-dark"><a href="#">Silvest Valley</a></button> 
+            <p>Silvest is the home of the Humans! These quest are for the towns of Silvest, Eastwatch and Cliffside</p>
+            <button type="button" class="btn btn-dark"><a href="silvestValley.html">Silvest Valley</a></button> 
 
             <div class="line"></div>
 
