--- a/guides.html
+++ b/guides.html
@@ -116,7 +116,7 @@
             <div class="line"></div>
 
             <h3 id="questGuide" class="anchor">Quest Guide</h3>
-            <p>Valinor quest guide is complete <br> Working on Black Swamp</p>
+            <p>All Quest</p>
             <button type="button" class="btn btn-dark"><a href="quest.html">Quest</a></button>
 
             <div class="line"></div>
