Changes to nav list

--- a/guides.html
+++ b/guides.html
@@ -117,6 +117,8 @@
 
             <h3 id="questGuide" class="anchor">Quest Guide</h3>
             <p>All Quest</p>
+            <br>
+            <p>Completed Valinor, Silvest Valley, Black Swamp and Darkwoods</p>
             <button type="button" class="btn btn-dark"><a href="quest.html">Quest</a></button>
 
             <div class="line"></div>
