--- a/index.html
+++ b/index.html
@@ -104,6 +104,20 @@
 
             <h2 id="aePatchNotes" class="anchor">Ashen Empires Patch Notes</h2>
 
+            <div class="body-line"></div>
+            <article>
+              <small class="article-date">FujiQ 9/20/2021</small>
+              <ul>
+                <li>Updated player loading process</li>
+                <li>Skills should all be showing now</li>
+                <li>Fix for Hell Spawn - can be accessed via inventor button on follower menu</li>
+                <li>Fixed prisoners so if you drop something into them it can be retrieved</li>
+                <li>Fix for wrong log in check (was supposed to check Vinteruul's dungeon but was looking at Horned Ones</li>
+                <li>Level Requirement on New TR quest (105)</li>
+                <li>Fix for tooltips in Pristine Dragon Scale set</li>
+              </ul>
+            </article>
+
 
             <div class="body-line"></div>
             <article>
